[project]
name = "bgreviewhl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "nikola>=8.3.3",
    "plumbum>=1.10.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.51.0",
    "streamlit-searchbox>=0.1.23",
    "watchdog>=6.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "ruff>=0.14.4",
    "sqlacodegen>=3.1.1",
]
